# SkyPredictor

./: Dockerfile  Makefile  README.md  out.txt  pyproject.toml  run_skypredictor.sh
baseline/: calculate.py  fetcher.py  predict.py  query.py  result.py  scheduler.py
baseline/config/: __init__.py  config.py  config.yaml
baseline/proto/: baseline.proto  generate.py
data/wal/: 00000000
examples/: configmap.yaml  deployment.yml
out_predict/: service_cpm.json  service_percentile.json
server/: server.py
test/e2e/: client.py  docker-compose.yml  e2e.yaml  requirements.txt
test/e2e/expected/: metrics.yaml  predict_service_cpm.yaml  predict_service_percentile.yaml
test/e2e/mock-oap/: Dockerfile  server.py
