#  Copyright 2025 SkyAPM org
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

[tool.poetry]
name = "sky-predictor"
version = "0.1.0"
description = "SkyPredictor is a metric trend predictor to generate alarm baselines."
authors = ["mrproliu <741550557@qq.com>"]
readme = "README.md"

packages = [
    { include = "baseline" }
]

[tool.poetry.dependencies]
python = "^3.12"
prophet = "^1.1.6"
apscheduler = "^3.11.0"
grpcio = "^1.70.0"
grpcio-tools = "^1.70.0"
pydantic = "^2.11.5"
pyyaml = "^6.0.2"
prometheus-client = "^0.22.0"
kubernetes = "^32.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
